# csv-database

./: .gitignore  README.md  data.csv  main.py  pyproject.toml  requirements.txt
src/: aggregator.py  config.py  main.py  models.py  utils.py  view.py
src/command_handlers/: abstract_handler.py  aggregator.py  filter.py
src/commands/: abstract_command.py  aggregator.py  filter.py
tests/: fixtures.py  test_abstract_handler.py  test_aggregator.py  test_filter.py  test_main.py  test_models.py  test_utils.py
tests/data/: test_data.csv
